# anchorpy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py
.github/: python-ci-old.yml  python-ci.yml
.github/workflows/: main.yml  python-ci.yml  python_with_poetry-ci.yml
scripts/: print_anchor.py  print_gas_prices.py  print_rates.py  print_tx_info.py
src/anchorman/: anchor.py  scratch.ipynb  scratch.py
src/anchorpy/: __init__.py  anchor.py  exchange.py  helpers.py  settings.py
test/: test_anchor.py
tests/: test_anchor.py  test_exchange.py
