[tool.poetry]
name = "anchorpy"
version = "0.1.0"
description = "A python-based API for Anchor-Protocol."
authors = ["Matthew Jennings <Centrus.007@gmail.com>"]
readme="README.md"
license = "Apache-2.0"
homepage = "https://github.com/Matthew-Jennings/anchorpy"
repository = "https://github.com/Matthew-Jennings/anchorpy"
keywords = ["terra-money"]
include = [
    "LICENSE",
]
classifiers = [
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
terra-sdk = "^0.14.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
bump2version = "^1.0.1"
flake8 = "^3.9.2"
pre-commit = "^2.13.0"
pylint = "^2.9.6"
pytest = "^6.2.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.autopep8]
select = "W293"

[tool.pytest.ini_options]
log_cli = true
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_level = "DEBUG"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_format = "%(asctime)s.%(msecs)03d [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
